--- a/index.html
+++ b/index.html
@@ -217,14 +217,15 @@
       updateDogImage();
       switchScreen('game-screen');
       startTimers();
+document.getElementById("bgm").play(); 
     }
 
     function updateDogImage() {
       const img = document.getElementById('dogImage');
       let stage = 0;
-      if (age <= 2) stage = 0;
-      else if (age <= 6) stage = 1;
-      else if (age <= 10) stage = 2;
+      if (age < 2) stage = 0;
+      else if (age < 6) stage = 1;
+      else if (age < 10) stage = 2;
       else stage = 3;
       img.src = `https://dessa1995.github.io/dessa/${breedImages[breed][stage]}`;
     }
